--- a/chat/lib/template/loggedIn.html
+++ b/chat/lib/template/loggedIn.html
@@ -214,7 +214,7 @@
 				<h3>[LANG]onlineUsers[/LANG]</h3>
 				<div id="onlineList"></div>
 			</div>
-			<div id="helpContainer" >
+			<div id="helpContainer" style="display:none;">
 				<h3>[LANG]help[/LANG]</h3>
 				<div id="helpList">
 					<dl>
