--- a/chat/css/prosilver.css
+++ b/chat/css/prosilver.css
@@ -49,13 +49,11 @@
 #content #headline {
 	left: 0px;
 	right: 0px;
-	/*by arjun background: #0c95d9;*/
-	background: #950d20;
+	background: #0c95d9;
 	color: white;
 }
 #content #onlineListContainer h3, #content #helpContainer h3, #content #settingsContainer h3 {
-/*by arjun	background-color:#0c95d9;*/
-	background-color: #950d20;
+	background-color:#0c95d9;
 	color:#fff;
 	height: 25px;
 }
