--- a/chat/lib/template/logs.html
+++ b/chat/lib/template/logs.html
@@ -116,8 +116,7 @@
 		<!--[if lt IE 7]>
 			<div></div>
 		<![endif]-->
-		<div id="mainPanelContainer">
-		<div id="chatList"></div> </div>
+		<div id="chatList"></div>
 		<div id="inputFieldContainer">
 			<textarea id="inputField" rows="1" cols="50" title="[LANG]inputLineBreak[/LANG]" onkeypress="ajaxChat.handleInputFieldKeyPress(event);"></textarea>
 		</div>
@@ -129,7 +128,7 @@
 			<input type="image" src="img/pixel.gif" class="button" id="audioButton" alt="[LANG]toggleAudio[/LANG]" title="[LANG]toggleAudio[/LANG]" onclick="ajaxChat.toggleSetting('audio', 'audioButton');"/>
 			<input type="image" src="img/pixel.gif" class="button" id="autoScrollButton" alt="[LANG]toggleAutoScroll[/LANG]" title="[LANG]toggleAutoScroll[/LANG]" onclick="ajaxChat.toggleSetting('autoScroll', 'autoScrollButton')"/>
   		</div>
-	  	<div id="settingsContainer" style="display:block;">
+	  	<div id="settingsContainer" style="display:none;">
  			<h3>[LANG]settings[/LANG]</h3>
  			<div id="settingsList">
 				<table>
@@ -249,7 +248,6 @@
 				</table>
 			</div>
 	  	</div>
-		
 		<!--
 			Please retain the full copyright notice below including the link to blueimp.net.
 			This not only gives respect to the amount of time given freely by the developer
