--- a/chat/lib/template/logs.html
+++ b/chat/lib/template/logs.html
@@ -9,7 +9,7 @@
 	<script src="js/chat.js" type="text/javascript" charset="UTF-8"></script>
 	<script src="js/logs.js" type="text/javascript" charset="UTF-8"></script>
 	<script src="js/lang/[LANG_CODE/].js" type="text/javascript" charset="UTF-8"></script>
-	<script src="js/config.js" type="text/javascript" charset="UTF-8"></script>
+	<script src="js/config.js?v=1" type="text/javascript" charset="UTF-8"></script>
 	<script src="js/FABridge.js" type="text/javascript" charset="UTF-8"></script>
 	<script type="text/javascript">
 		// <![CDATA[
