--- a/chat/lib/template/shoutbox.html
+++ b/chat/lib/template/shoutbox.html
@@ -3,7 +3,7 @@
 	<script src="[AJAX_CHAT_URL/]js/custom.js" type="text/javascript" charset="UTF-8"></script>
 	<script src="[AJAX_CHAT_URL/]js/shoutbox.js" type="text/javascript" charset="UTF-8"></script>
 	<script src="[AJAX_CHAT_URL/]js/lang/[LANG_CODE/].js" type="text/javascript" charset="UTF-8"></script>
-	<script src="[AJAX_CHAT_URL/]js/config.js" type="text/javascript" charset="UTF-8"></script>
+	<script src="[AJAX_CHAT_URL/]js/config.js?v=1" type="text/javascript" charset="UTF-8"></script>
 	<script src="[AJAX_CHAT_URL/]js/FABridge.js" type="text/javascript" charset="UTF-8"></script>
 	<div id="ajaxChatChatList"></div>
 	<div id="ajaxChatInputFieldContainer" class="[CLASS_WRITEABLE/]">
