--- a/chat/css/prosilver.css
+++ b/chat/css/prosilver.css
@@ -9,7 +9,7 @@
 @import url('global.css');
 @import url('fonts.css');
 @import url('print.css');
-@import url('custom.css');
+@import url('custom.css?v=1.1');
 
 /* Firefox button padding fix */
 #content #bbCodeContainer input::-moz-focus-inner, #content #logoutButton::-moz-focus-inner, #content #submitButton::-moz-focus-inner {
