--- a/chat/lib/template/shoutbox.html
+++ b/chat/lib/template/shoutbox.html
@@ -1,5 +1,5 @@
 <div id="ajaxChatContent">
-	<script src="[AJAX_CHAT_URL/]js/chat.js" type="text/javascript" charset="UTF-8"></script>
+	<script src="[AJAX_CHAT_URL/]js/chat.js?v=1.11" type="text/javascript" charset="UTF-8"></script>
 	<script src="[AJAX_CHAT_URL/]js/custom.js" type="text/javascript" charset="UTF-8"></script>
 	<script src="[AJAX_CHAT_URL/]js/shoutbox.js" type="text/javascript" charset="UTF-8"></script>
 	<script src="[AJAX_CHAT_URL/]js/lang/[LANG_CODE/].js" type="text/javascript" charset="UTF-8"></script>
