--- a/chat/css/Mercury.css
+++ b/chat/css/Mercury.css
@@ -9,8 +9,7 @@
 @import url('global.css');
 @import url('fonts.css');
 @import url('print.css');
-@import url('custom.css');
-
+@import url('custom.css?v=1.1');
 /* Buttons */
 #content input, #content select, #content textarea {
 	border: 0;
