--- a/chat/css/Pine.css
+++ b/chat/css/Pine.css
@@ -5,7 +5,7 @@
 @import url('global.css');
 @import url('fonts.css');
 @import url('print.css');
-@import url('custom.css');
+@import url('custom.css?v=1.1');
 
 #content input, select, #content textarea, #loginButton { 
 	border: 0;
