--- a/chat/css/Uranium.css
+++ b/chat/css/Uranium.css
@@ -5,7 +5,7 @@
 @import url('global.css');
 @import url('fonts.css');
 @import url('print.css');
-@import url('custom.css');
+@import url('custom.css?v=1.1');
 html {
     height: 100%;
 }
