--- a/chat/css/beige.css
+++ b/chat/css/beige.css
@@ -6,8 +6,7 @@
 @import url('global.css');
 @import url('fonts.css');
 @import url('print.css');
-@import url('custom.css');
-
+@import url('custom.css?v=1.1');
 /* Buttons */
 #content #bbCodeContainer input, #content #logoutButton, #content #submitButton, #loginForm #loginButton {
 	background-color:#d9ce72;
