--- a/chat/lib/template/loggedOut.html
+++ b/chat/lib/template/loggedOut.html
@@ -17,7 +17,7 @@ margin:0;
 <div id="loginHeadlineContainer">
 <h2>[LANG]title[/LANG]</h2>
 </div>
-Log into Q2A first -> <a href="../../../" target="_blank">Click here</a> and then reload this page
+Log into Q2A first - <a href="../../../" target="_blank">Click here</a> and then reload this page
 </div>
 </body>
 </html>
